--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "webpack-dev-server": "^3.1.14"
   },
   "dependencies": {
+    "@pixi/sprite-tiling": "^5.1.1",
     "express": "^4.17.1",
     "pixi.js": "^5.0.4",
     "pixi.js-keyboard": "^1.0.9",
