--- a/package.json
+++ b/package.json
@@ -19,9 +19,10 @@
   },
   "dependencies": {
     "@pixi/sprite-tiling": "^5.1.1",
+    "cron": "^1.7.1",
     "express": "^4.17.1",
     "pixi-text-input": "^1.0.4",
-    "pixi.js": "^5.0.4",
+    "pixi.js": "^5.1.1",
     "pixi.js-keyboard": "^1.0.9",
     "pixi.js-mouse": "^1.0.4",
     "websocket": "^1.0.29"
